[gd_scene load_steps=3 format=2]

[ext_resource path="res://src/EndLevel/EndLevel.gd" type="Script" id=1]
[ext_resource path="res://theme.tres" type="Theme" id=2]

[node name="EndLevel" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 1 )

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 352.0
margin_top = 256.0
margin_right = 672.0
margin_bottom = 344.0
rect_min_size = Vector2( 320, 0 )

[node name="CenterContainer" type="CenterContainer" parent="CenterContainer/VBoxContainer"]
margin_right = 320.0
margin_bottom = 28.0

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer/CenterContainer"]
margin_left = 69.0
margin_right = 251.0
margin_bottom = 28.0

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer/CenterContainer/HBoxContainer"]
margin_right = 66.0
margin_bottom = 28.0
text = "Level "

[node name="LevelNumber" type="Label" parent="CenterContainer/VBoxContainer/CenterContainer/HBoxContainer"]
margin_left = 70.0
margin_right = 78.0
margin_bottom = 28.0
text = "/"

[node name="Label3" type="Label" parent="CenterContainer/VBoxContainer/CenterContainer/HBoxContainer"]
margin_left = 82.0
margin_right = 182.0
margin_bottom = 28.0
text = " complete"

[node name="MarginContainer" type="MarginContainer" parent="CenterContainer/VBoxContainer"]
margin_top = 32.0
margin_right = 320.0
margin_bottom = 52.0
rect_min_size = Vector2( 0, 20 )

[node name="NextLevelButton" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 56.0
margin_right = 320.0
margin_bottom = 88.0
text = "Next level"

[connection signal="pressed" from="CenterContainer/VBoxContainer/NextLevelButton" to="." method="_on_NextLevelButton_pressed"]
